--- a/assets/styles.css
+++ b/assets/styles.css
@@ -376,7 +376,7 @@ h1, h2, h3, h4, h5, h6{
 
 header{
     width:100%;
-    background:linear-gradient(to right, rgba(1,1,1,0.9) 10%, rgba(1,1,1,0.5) 50%, rgba(1,1,1,0.1) 100%), url("/images/back.jpg");
+    background:linear-gradient(to right, rgba(1,1,1,0.9) 10%, rgba(1,1,1,0.5) 50%, rgba(1,1,1,0.1) 100%), url("../images/back.jpg");
     background-size:cover;
     background-position:left;
     align-items:center;
